<resources>
    <string name="app_name">PhotoFiltersProject</string>


    <string name="title_filter">FILTER</string>
    <string name="title_main">MAIN</string>
    <string name="title_gallery">GALLERY</string>
    <string name="title_login">LOGIN</string>
    <string name="title_settings">SETTINGS</string>
    <string name="title_register">REGISTER</string>
    <string name="title_menu">MENU</string>
    <string name="title_favorite">FAVORITE</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="back">Go Back</string>
    <string name="share">Share</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>

    <string name="e1">Example 1</string>
    <string name="e2">Example 2</string>

</resources>