<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="195dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/photo_filters_project_icom" />

    <Button
        android:id="@+id/main_btn_login"
        android:layout_width="162dp"
        android:layout_height="47dp"
        android:text="@string/title_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.110000014" />

    <Button
        android:id="@+id/main_btn_register"
        android:layout_width="174dp"
        android:layout_height="46dp"
        android:text="@string/title_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_btn_login"
        app:layout_constraintStart_toStartOf="@+id/main_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_login"
        app:layout_constraintVertical_bias="0.22000003" />

    <Button
        android:id="@+id/main_btn_guest"
        android:layout_width="205dp"
        android:layout_height="48dp"
        android:text="guest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_btn_login"
        app:layout_constraintStart_toStartOf="@+id/main_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_register"
        app:layout_constraintVertical_bias="0.35000002" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="335dp"
        android:layout_height="63dp"
        android:fontFamily="@font/arizonia"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorMain"
        android:textSize="46sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002" />
</androidx.constraintlayout.widget.ConstraintLayout>